<resources>
    <string name="app_name">MyLogin</string>
    <string name="login_area">Login Area</string>
    <string name="dark_app">Dark App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
</resources>